# freertos-intro

./: .gitignore  CMakeLists.txt  README.md  build.sh  data.csv
app/: app.c  log.c  mymqttclient.c
app/include/: FreeRTOSConfig.h  log.h  mymqttclient.h
